# vpn

./: .coveragerc  .dockerignore  .env  .env.example  .gitignore  .license-header.txt  .pre-commit-config.yaml  .trivyignore  ADMIN-GUIDE.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  DEVELOPER.md  DOCKER.md  Dockerfile  IMPROVEMENT_PLAN.md  INSTALL.md  LEGACY_SCRIPTS.md  Makefile  OUTLINE-V2RAY-README.md  PERFORMANCE.md  PLANNING.md  README.md  REFACTORING_PLAN.md  SECURITY.md  TASK.md  TESTING.md  VLESS-CLIENT-GUIDE.md  build-release.sh  client-setup.md  debug_reality.sh  deploy.sh  docker-compose.hub.yml  docker-compose.override.yml  docker-compose.yml  ericqmore-outline-vpn-arm.txt  firewall.sh  fix-path.sh  fix-permissions.sh  generate-vless-client.sh  (+26 more)
crates/vpn-cli/: Cargo.toml
crates/vpn-cli/src/: cli.rs  commands.rs  compose.rs  config.rs  error.rs  lib.rs  main.rs  menu.rs  migration.rs  privileges.rs  runtime.rs
crates/vpn-cli/src/privileges/: audit.rs  bracket.rs  mod.rs
crates/vpn-cli/src/utils/: display.rs  format_utils.rs  mod.rs  validation.rs
crates/vpn-cli/tests/: integration_tests.rs  outline_management_test.rs
crates/vpn-cluster/: Cargo.toml  build.rs
crates/vpn-cluster/examples/: cluster_demo.rs
crates/vpn-cluster/proto/: cluster.proto
crates/vpn-cluster/src/: communication.rs  config.rs  consensus.rs  coordination.rs  distributed_storage.rs  error.rs  gossip.rs  leader_election.rs  lib.rs  membership.rs  node.rs  state.rs
crates/vpn-cluster/tests/: integration_tests.rs
crates/vpn-compose/: Cargo.toml
crates/vpn-compose/docker-compose/: .env  docker-compose.yml
crates/vpn-compose/src/: config.rs  environment.rs  error.rs  generator.rs  ha.rs  lib.rs  manager.rs  services.rs  template.rs
crates/vpn-compose/tests/: ha_tests.rs  integration_tests.rs
crates/vpn-containerd/: Cargo.toml
crates/vpn-containerd/examples/: runtime_integration.rs
crates/vpn-containerd/src/: batch.rs  containers.rs  error.rs  events.rs  factory.rs  health.rs  images.rs  lib.rs  logs.rs  runtime.rs  snapshots.rs  stats.rs  tasks.rs  types.rs
crates/vpn-containerd/tests/: basic_connectivity.rs  e2e_tests.rs  factory_tests.rs  integration_tests.rs  performance_comparison.rs  unit_tests.rs
crates/vpn-crypto/: Cargo.toml
crates/vpn-crypto/src/: encoding.rs  error.rs  keys.rs  lib.rs  password.rs  protocol.rs  qr.rs  secure_storage.rs  uuid.rs
crates/vpn-crypto/tests/: integration_tests.rs  property_tests.proptest-regressions  property_tests.rs
crates/vpn-docker/: Cargo.toml
crates/vpn-docker/proptest-regressions/: proptest.txt
crates/vpn-docker/src/: cache.rs  container.rs  error.rs  health.rs  lib.rs  logs.rs  pool.rs  proptest.rs  volumes.rs
crates/vpn-docker/tests/: integration_tests.rs
crates/vpn-identity/: Cargo.toml
crates/vpn-identity/migrations/: 001_initial.sql  20250101000001_initial_schema.sql
crates/vpn-identity/src/: auth.rs  config.rs  error.rs  ldap.rs  lib.rs  lib_full.rs  models.rs  oauth.rs  rbac.rs  service.rs  session.rs  storage.rs
crates/vpn-identity/tests/: identity_tests.rs
crates/vpn-monitor/: Cargo.toml
crates/vpn-monitor/src/: alerts.rs  error.rs  health.rs  lib.rs  logs.rs  metrics.rs  traffic.rs
crates/vpn-monitor/tests/: integration_tests.rs  minimal_integration_tests.rs
crates/vpn-network/: Cargo.toml
crates/vpn-network/src/: error.rs  firewall.rs  ip.rs  lib.rs  manager.rs  port.rs  proptest.rs  sni.rs  subnet.rs
crates/vpn-network/tests/: integration_tests.rs
crates/vpn-operator/: Cargo.toml  Dockerfile  README.md
crates/vpn-operator/deploy/examples/: vpnserver-sample.yaml
crates/vpn-operator/deploy/manifests/: crd.yaml  deployment.yaml  rbac.yaml
crates/vpn-operator/scripts/backup/: backup-vpn-resources.sh  restore-vpn-resources.sh
crates/vpn-operator/src/: controller.rs  crd.rs  error.rs  lib.rs  main.rs  reconciler.rs  resources.rs  webhook.rs
crates/vpn-operator/src/resources/: secret.rs  (+3 more)
crates/vpn-proxy/: Cargo.toml
crates/vpn-proxy/src/: auth.rs  config.rs  error.rs  lib.rs  manager.rs  metrics.rs  pool.rs  rate_limit.rs  zero_copy.rs
crates/vpn-proxy/tests/: integration_tests.rs
crates/vpn-runtime/: Cargo.toml
crates/vpn-runtime/src/: config.rs  error.rs  factory.rs  lib.rs  traits.rs  types.rs
crates/vpn-server/: Cargo.toml
crates/vpn-server/src/: docker_utils.rs  error.rs  installer.rs  lib.rs  lifecycle.rs  proxy_installer.rs  rotation.rs  templates.rs  validator.rs
crates/vpn-server/tests/: basic_integration_tests.rs  integration_tests.rs  outline_installation_test.rs  outline_status_test.rs
crates/vpn-telemetry/: Cargo.toml
crates/vpn-telemetry/src/: config.rs  dashboard.rs  error.rs  exporters.rs  health.rs  lib.rs  metrics.rs  performance.rs  tracing.rs
crates/vpn-types/: Cargo.toml
crates/vpn-types/src/: container.rs  error.rs  lib.rs  network.rs  protocol.rs  user.rs  validation.rs
crates/vpn-users/: Cargo.toml
crates/vpn-users/src/: batch.rs  config.rs  error.rs  lib.rs  links.rs  manager.rs  proptest.rs  user.rs
crates/vpn-users/tests/: basic_integration_tests.rs  integration_tests.rs
rust-vpn/crates/vpn-docker/: Cargo.toml
vpn-python/: .coveragerc  .pre-commit-config.yaml  DEVELOPMENT.md  Dockerfile  README.md  docker-compose.dev.yml  pyproject.toml  pytest.ini
vpn-python/.github/workflows/: ci.yml  release.yml
vpn-python/docs/: PHASE3_SUMMARY.md  PHASE5_VPN_PROXY_SUMMARY.md
vpn-python/docs/getting-started/: quickstart.md
vpn-python/scripts/: install.sh
vpn-python/tests/: test_context_menu.py  test_models.py  test_tui_snapshots.py  test_tui_themes.py  test_tui_widgets.py  test_user_manager.py
vpn-python/vpn/: __main__.py
vpn-python/vpn/cli/: app.py
vpn-python/vpn/core/: config.py  database.py  exceptions.py  models.py
vpn-python/vpn/protocols/: __init__.py  base.py  shadowsocks.py  wireguard.py
vpn-python/vpn/services/: __init__.py  base.py  docker_manager.py  network_manager.py  server_manager.py  user_manager.py
vpn-python/vpn/tui/: app.py
vpn-python/vpn/utils/: __init__.py  diagnostics.py  logger.py  migration.py
(+548 files in other folders)
