[workspace]
resolver = "2"
members = [
    "crates/vpn-types",
    "crates/vpn-docker",
    "crates/vpn-crypto",
    "crates/vpn-network",
    "crates/vpn-users",
    "crates/vpn-server",
    "crates/vpn-monitor",
    "crates/vpn-cli", 
    "crates/vpn-runtime",
    # "crates/vpn-containerd",  # DEPRECATED: Removed from active development, kept for reference
    "crates/vpn-telemetry",
    "crates/vpn-compose",
    "crates/vpn-cluster",
    "crates/vpn-operator",
    "crates/vpn-proxy",
    # "crates/vpn-identity",  # TODO: Fix SQLX issues before enabling
]

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["VPN Project Team"]
license = "MIT"
repository = "https://github.com/your-org/vpn-rust"

[workspace.dependencies]
tokio = { version = "1.35", features = ["full"] }
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing = "0.1"
tracing-subscriber = "0.3"

# Docker
bollard = "0.16"

# Cryptography
base64 = "0.21"
uuid = { version = "1.6", features = ["v4", "serde"] }
qrcode = "0.14"
image = "0.24"
x25519-dalek = "2.0"
rand = "0.8"
hex = "0.4"

# Network
ipnetwork = "0.20"

# Proxy dependencies
warp = "0.3"
http = "1.0"
tower = "0.4"
dashmap = "5.5"
argon2 = "0.5"
prometheus = { version = "0.13", features = ["process"] }
opentelemetry = "0.21"
opentelemetry-prometheus = "0.14"
axum = "0.7"
pnet = "0.34"

# CLI

# Testing dependencies moved to workspace.dependencies
async-trait = "0.1"
chrono = { version = "0.4", features = ["serde"] }
quickcheck = "1.0"
mockall = "0.12"
clap = { version = "4.0", features = ["derive"] }
proptest = "1.0"
toml = "0.8"

# Distributed systems dependencies
raft = "0.6"
etcd-rs = "1.0"
consul = "0.4"
sled = "0.34"
tikv-client = "0.3"
tonic = "0.11"
prost = "0.12"
tokio-stream = "0.1"
hyper = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
config = "0.14"
ring = "0.17"
num_cpus = "1.0"

