[package]
name = "vpn-containerd"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
vpn-runtime = { path = "../vpn-runtime" }
containerd-client = "0.8.0"
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tracing = { workspace = true }
async-trait = "0.1"
chrono = "0.4"
futures-util = "0.3"
pin-project = "1.0"
tonic = "0.12"
prost = "0.13"

[dev-dependencies]
tokio-test = "0.4"
