[package]
name = "vpn-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
x25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = "0.5"
base64 = { workspace = true }
uuid = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = "0.4"
sha2 = "0.10"

[dev-dependencies]
tempfile = "3.8"