[package]
name = "vpn-crypto"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
x25519-dalek = { workspace = true }
rand = { workspace = true }
rand_core = "0.5"
base64 = { workspace = true }
uuid = { workspace = true }
qrcode = { workspace = true }
image = { workspace = true }
qr2term = "0.3"
anyhow = { workspace = true }
thiserror = { workspace = true }
hex = { workspace = true }
sha2 = "0.10"
aes-gcm = "0.10"
pbkdf2 = "0.12"
zeroize = "1.7"
argon2 = "0.5"
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
tokio = { workspace = true, features = ["rt", "fs", "macros"] }

[dev-dependencies]
tempfile = "3.8"
proptest = { workspace = true }
quickcheck = { workspace = true }
tokio-test = "0.4"