[package]
name = "vpn-identity"
version = "0.1.0"
edition = "2021"
authors = ["VPN Development Team"]
description = "Identity and authentication management for VPN services"
license = "MIT"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Web framework for OAuth2/OIDC endpoints
axum = { version = "0.7", features = ["macros", "json"] }
axum-extra = { version = "0.9", features = ["cookie", "typed-header"] }
tower = { version = "0.4", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# OAuth2 and OIDC
oauth2 = "4"
openidconnect = "3"

# LDAP
ldap3 = { version = "0.11", features = ["tokio"] }

# JWT handling
jsonwebtoken = "9"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "json"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }

# HTTP client
reqwest = { version = "0.12", features = ["json", "rustls-tls"] }

# UUID generation
uuid = { version = "1.8", features = ["v4", "serde"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Password hashing
argon2 = "0.5"

# Environment configuration
dotenvy = "0.15"

# Session management
redis = { version = "0.25", features = ["tokio-comp", "connection-manager"] }

# Validation
validator = { version = "0.18", features = ["derive"] }

# Metrics
prometheus = "0.13"

# Configuration
toml = "0.8"

[dev-dependencies]
tokio-test = "0.4"
mockall = "0.12"
wiremock = "0.6"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres", "redis"] }