[package]
name = "vpn-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
ipnetwork = { workspace = true }
pnet = { workspace = true }
reqwest = { version = "0.11", features = ["json"] }
serde_json = "1.0"
dns-lookup = "2.0"
local-ip-address = "0.5"
nix = { version = "0.27", features = ["net"] }
rand = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"