[package]
name = "vpn-network"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
tokio = { workspace = true, features = ["rt", "net", "time", "process", "macros"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
ipnetwork = { workspace = true }
pnet = { workspace = true }
reqwest = { version = "0.12", features = ["json"] }
serde_json = "1.0"
dns-lookup = "2.0"
local-ip-address = "0.6"
nix = { version = "0.30", features = ["net"] }
rand = { workspace = true }

[dev-dependencies]
tokio-test = "0.4"
proptest = "1.0"
proptest-derive = "0.6"