[package]
name = "vpn-operator"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "vpn-operator"
path = "src/main.rs"

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["full"] }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
tracing = { workspace = true }
chrono = { workspace = true }
async-trait = { workspace = true }
clap = { workspace = true }
tracing-subscriber = { workspace = true }

# Kubernetes dependencies
kube = { version = "0.90", features = ["runtime", "derive", "client", "ws", "admission"] }
k8s-openapi = { version = "0.21", features = ["v1_29"] }
schemars = "1.0"
futures = "0.3"
json-patch = "1.0"

# Template and configuration
tera = "1.20"
handlebars = "5.0"

# HTTP client for webhooks
reqwest = { workspace = true }

# Crypto and utilities
uuid = { workspace = true }
rand = "0.8"
base64 = { workspace = true }

# Internal dependencies
vpn-cluster = { path = "../vpn-cluster" }

[dev-dependencies]
tower-test = "0.4"
httpmock = "0.7"
tempfile = "3.0"