[package]
name = "vpn-runtime"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
async-trait = "0.1"
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
chrono = "0.4"
futures-util = "0.3"
pin-project = "1.0"

# Note: Runtime implementations should depend on vpn-runtime, not vice versa
# to avoid circular dependencies
