[package]
name = "vpn-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vpn-docker = { path = "../vpn-docker" }
vpn-crypto = { path = "../vpn-crypto" }
vpn-network = { path = "../vpn-network" }
vpn-users = { path = "../vpn-users" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = "0.9"
reqwest = { version = "0.11", features = ["json"] }
bollard = { workspace = true }
sha2 = "0.10"
hex = "0.4"
chrono = "0.4"
uuid = { workspace = true }

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"