[package]
name = "vpn-telemetry"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
# Core dependencies
tokio = { workspace = true, features = ["rt", "sync", "time", "net", "io-util", "macros"] }
anyhow.workspace = true
thiserror.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber = { workspace = true, features = ["env-filter", "json"] }

# Prometheus metrics
prometheus = { version = "0.13", optional = true }

# HTTP client for exporters
reqwest = { version = "0.11", features = ["json"] }

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Configuration
toml.workspace = true

# UUID generation
uuid.workspace = true

# Async runtime
async-trait = "0.1"

# Internal dependencies
vpn-docker = { path = "../vpn-docker" }
vpn-users = { path = "../vpn-users" }
vpn-server = { path = "../vpn-server" }

[features]
default = ["prometheus"]
prometheus = ["dep:prometheus"]

[dev-dependencies]
mockall.workspace = true
proptest.workspace = true