[package]
name = "vpn-types"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Common types and traits for VPN infrastructure"

[dependencies]
serde = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
uuid = { workspace = true }
regex = "1.10"
dirs = "5.0"

[dev-dependencies]
serde_json = { workspace = true }