[package]
name = "vpn-users"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
vpn-crypto = { path = "../vpn-crypto" }
vpn-network = { path = "../vpn-network" }
tokio = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
uuid = { workspace = true }
base64 = { workspace = true }
chrono = { version = "0.4", features = ["serde"] }
url = "2.4"
urlencoding = "2.1"
serde_yaml = "0.9"
dashmap = "5.5"

[dev-dependencies]
tempfile = "3.8"
tokio-test = "0.4"